[package]
name = "ssh-packet"
description = "A library implementing SSH packet reading/writing using `binrw`."
documentation = "https://docs.rs/ssh-packet"
repository = "https://github.com/Nurrl/ssh-packet"
readme = "README.md"
license = "GPL-3.0"
keywords = ["ssh", "binary"]
authors = ["Maya the bee <15341887+Nurrl@users.noreply.github.com>"]
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]

# Whether to pass `--all-features` to Cargo (default: false)
all-features = true

# Enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
binrw = "0.12.0"
thiserror = "1.0.49"

futures = { version = "0.3.28", default-features = false, features = [
    "std",
], optional = true }

[dev-dependencies]
rstest = "0.18.2"
async-std = { version = "1.12.0", features = ["attributes"] }
