[package]
name = "ssh-packet"
description = "A library implementing SSH packet reading/writing using `binrw`."
documentation = "https://docs.rs/ssh-packet"
repository = "https://github.com/lowlevl/ssh-packet"
readme = "README.md"
license = "GPL-3.0"
keywords = ["ssh", "binary"]
authors = ["Maya the bee <15341887+lowlevl@users.noreply.github.com>"]
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]

# Whether to pass `--all-features` to Cargo (default: false)
all-features = true

# Enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
binrw = "0.14.0"
thiserror = "1.0.49"

# Optional dependencies
futures = { version = "0.3.28", default-features = false, features = [
    "std",
], optional = true }
digest = { version = "0.10.7", default-features = false, optional = true }
signature = { version = "2.2.0", default-features = false, optional = true }
zeroize = { version = "1.8.1", features = ["derive"], optional = true }

[dev-dependencies]
rstest = "0.21.0"
async-std = { version = "1.12.0", features = ["attributes"] }
